build(workspace): use beta versions in (dev)dependencies

--- a/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
@@ -30,7 +30,7 @@
     "@babel/parser": "^7.12.5",
     "@babel/preset-env": "^7.12.1",
     "@babel/traverse": "^7.12.5",
-    "@enterthenamehere/color-logger": "^0.0.7",
+    "@enterthenamehere/color-logger": "^0.0.7-beta",
     "fs-extra": "^9.0.1"
   },
   "devDependencies": {
