--- a/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
+++ b/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
@@ -21,8 +21,8 @@
     "transpile": "babel ./src --out-dir ./out"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "@enterthenamehere/color-logger": "^0.0.7"
+    "@enterthenamehere/color-logger": "^0.0.7-beta",
+    "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.7",
