--- a/packages/esdoc-npm7-monorepo/esdoc/package.json
+++ b/packages/esdoc-npm7-monorepo/esdoc/package.json
@@ -28,8 +28,8 @@
     "transpile": "babel ./src --out-dir ./out"
   },
   "dependencies": {
-    "@enterthenamehere/color-logger": "^0.0.7",
-    "@enterthenamehere/esdoc-core": "^1.3.0",
+    "@enterthenamehere/color-logger": "^0.0.7-beta",
+    "@enterthenamehere/esdoc-core": "^1.3.0-beta",
     "fs-extra": "^9.0.1",
     "minimist": "^1.2.5"
   },
