--- a/packages/esdoc-npm7-monorepo/packages/esdoc-brand-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-brand-plugin/package.json
@@ -15,7 +15,7 @@
     "fs-extra": "^9.0.1"
   },
   "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
