--- a/packages/esdoc-npm7-monorepo/packages/esdoc-importpath-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-importpath-plugin/package.json
@@ -11,7 +11,7 @@
     "directory": "packages/esdoc-importpath-plugin"
   },
   "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
