--- a/packages/esdoc-npm7-monorepo/packages/esdoc-inject-gtm-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-inject-gtm-plugin/package.json
@@ -14,7 +14,7 @@
     "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
