--- a/packages/esdoc-npm7-monorepo/packages/esdoc-lint-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-lint-plugin/package.json
@@ -11,10 +11,10 @@
     "directory": "packages/esdoc-lint-plugin"
   },
   "dependencies": {
-    "@enterthenamehere/esdoc-core": "^1.3.0"
+    "@enterthenamehere/esdoc-core": "^1.3.0-beta"
   },
   "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
