--- a/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
@@ -15,10 +15,10 @@
     "cheerio": "^1.0.0-rc.3",
     "cpx2": "^3.0.0",
     "escape-string-regexp": "^4.0.0",
-    "@enterthenamehere/esdoc-core": "^1.3.0",
+    "@enterthenamehere/esdoc-core": "^1.3.0-beta",
     "fs-extra": "^9.0.1",
     "highlight.js": "^10.4.0",
-    "@enterthenamehere/ice-cap": "^0.2.0",
+    "@enterthenamehere/ice-cap": "^0.2.0-beta",
     "marked": "^1.2.5",
     "sanitize-html": "^2.1.2",
     "taffydb": "^2.7.3",
@@ -30,17 +30,17 @@
     "@babel/eslint-parser": "^7.12.1",
     "@babel/eslint-plugin": "^7.12.1",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@enterthenamehere/esdoc": "^1.3.0",
-    "@enterthenamehere/esdoc-accessor-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-brand-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-coverage-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-ecmascript-proposal-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-external-ecmascript-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-integrate-manual-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-integrate-test-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-type-inference-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-unexported-identifier-plugin": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-accessor-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-brand-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-coverage-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-ecmascript-proposal-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-external-ecmascript-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-integrate-manual-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-integrate-test-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-type-inference-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-unexported-identifier-plugin": "^1.3.0-beta",
     "eslint": "^7.14.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
