--- a/packages/esdoc-npm7-monorepo/packages/esdoc-publish-markdown-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-publish-markdown-plugin/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "fs-extra": "^9.0.1",
-    "@enterthenamehere/ice-cap": "^0.2.0",
+    "@enterthenamehere/ice-cap": "^0.2.0-beta",
     "to-markdown": "^3.1.1"
   },
   "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
