--- a/packages/esdoc-npm7-monorepo/packages/esdoc-standard-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-standard-plugin/package.json
@@ -11,20 +11,20 @@
     "directory": "packages/esdoc-standard-plugin"
   },
   "dependencies": {
-    "@enterthenamehere/esdoc-accessor-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-brand-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-coverage-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-external-ecmascript-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-integrate-manual-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-integrate-test-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-lint-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-publish-html-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-type-inference-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc-unexported-identifier-plugin": "^1.3.0"
+    "@enterthenamehere/esdoc-accessor-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-brand-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-coverage-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-external-ecmascript-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-integrate-manual-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-integrate-test-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-lint-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-publish-html-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-type-inference-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-unexported-identifier-plugin": "^1.3.0-beta"
   },
   "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
