--- a/packages/esdoc-npm7-monorepo/packages/esdoc-type-inference-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-type-inference-plugin/package.json
@@ -11,11 +11,11 @@
     "directory": "packages/esdoc-type-inference-plugin"
   },
   "dependencies": {
-    "@enterthenamehere/color-logger": "^0.0.7",
-    "@enterthenamehere/esdoc-core": "^1.3.0"
+    "@enterthenamehere/color-logger": "^0.0.7-beta",
+    "@enterthenamehere/esdoc-core": "^1.3.0-beta"
   },
   "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
