--- a/packages/esdoc-npm7-monorepo/packages/esdoc-typescript-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-typescript-plugin/package.json
@@ -11,11 +11,11 @@
     "directory": "packages/esdoc-typescript-plugin"
   },
   "dependencies": {
-    "@enterthenamehere/esdoc-core": "^1.3.0",
+    "@enterthenamehere/esdoc-core": "^1.3.0-beta",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
