--- a/packages/esdoc-npm7-monorepo/packages/esdoc-exclude-source-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-exclude-source-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enterthenamehere/esdoc-exclude-source-plugin",
-  "version": "1.3.0.beta.0",
+  "version": "1.3.0-beta.0",
   "description": "A exclude source plugin for ESDoc",
   "author": "h13i32maru",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/packages/esdoc-exclude-source-plugin",
