--- a/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "@babel/generator": "^7.12.5",
-    "cheerio": "^1.0.0-rc.3",
+    "@enterthenamehere/esdoc-core": "^1.3.0-beta",
+    "@enterthenamehere/ice-cap": "^0.2.0-beta",
     "cpx2": "^3.0.0",
     "escape-string-regexp": "^4.0.0",
-    "@enterthenamehere/esdoc-core": "^1.3.0-beta",
     "fs-extra": "^9.0.1",
     "highlight.js": "^10.4.0",
-    "@enterthenamehere/ice-cap": "^0.2.0-beta",
+    "cheerio": "^1.0.0-rc.5",
     "marked": "^1.2.5",
     "sanitize-html": "^2.1.2",
     "taffydb": "^2.7.3",
@@ -63,7 +63,7 @@
     "prepare": "npm run build",
     "test": "npm run test:clear && npm run test:mocha",
     "test:clear": "trash ./test/fixture/out",
-    "test:mocha": "mocha ./test/src --recursive --extension .test.js -t 10000 --require esm --require ./test/src/init.js",
+    "test:mocha": "mocha ./test/src --recursive --extension .test.js -t 10000 --require esm --require ./test/src/init.js -- --inspect",
     "transpile": "babel ./src --out-dir ./out"
   },
   "keywords": [
