--- a/packages/esdoc-npm7-monorepo/packages/esdoc-brand-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-brand-plugin/package.json
@@ -11,8 +11,8 @@
     "directory": "packages/esdoc-brand-plugin"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "fs-extra": "^9.0.1"
+    "fs-extra": "^9.0.1",
+    "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
     "@enterthenamehere/esdoc": "^1.3.0-beta",
