--- a/packages/esdoc-npm7-monorepo/packages/esdoc-standard-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-standard-plugin/package.json
@@ -14,6 +14,7 @@
     "@enterthenamehere/esdoc-accessor-plugin": "^1.3.0-beta",
     "@enterthenamehere/esdoc-brand-plugin": "^1.3.0-beta",
     "@enterthenamehere/esdoc-coverage-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-ecmascript-proposal-plugin": "^1.3.0-beta",
     "@enterthenamehere/esdoc-external-ecmascript-plugin": "^1.3.0-beta",
     "@enterthenamehere/esdoc-integrate-manual-plugin": "^1.3.0-beta",
     "@enterthenamehere/esdoc-integrate-test-plugin": "^1.3.0-beta",
