--- a/packages/esdoc-npm7-monorepo/common/color-logger/package.json
+++ b/packages/esdoc-npm7-monorepo/common/color-logger/package.json
@@ -12,15 +12,15 @@
   "scripts": {
     "build": "npm run clear && npm run transpile",
     "clear": "trash ./out",
-    "esdoc": "esdoc -c esdoc.json",
+    "esdoc": "npm run esdoc:generate && npm run esdoc:copy",
+    "esdoc:generate": "esdoc -c esdoc.json",
+    "esdoc:copy": "cpx \"./misc/color-logger.png\" \"out/docs/misc\" --verbose",
     "prepare": "npm run build",
     "test": "npm run test:clear && npm run test:transpile && npm run test:mocha",
     "test:clear": "trash ./test/out",
     "test:mocha": "mocha ./test/out --recursive --extension .test.js --require esm -t 5000",
     "test:transpile": "babel ./test/src --out-dir ./test/out",
     "transpile": "babel ./src --out-dir ./out"
-  },
-  "dependencies": {
   },
   "devDependencies": {
     "@babel/cli": "^7.12.7",
@@ -29,8 +29,10 @@
     "@babel/eslint-plugin": "^7.12.1",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
-    "@enterthenamehere/esdoc-importpath-plugin": "^1.3.0",
-    "@enterthenamehere/esdoc": "^1.3.0",
+    "@enterthenamehere/esdoc": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-importpath-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-standard-plugin": "^1.3.0-beta",
+    "cpx2": "^3.0.0",
     "eslint": "^7.14.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
