--- a/packages/esdoc-npm7-monorepo/package.json
+++ b/packages/esdoc-npm7-monorepo/package.json
@@ -4,7 +4,9 @@
     "version": "1.3.0-beta.0",
     "license": "MIT",
     "workspaces": [
-        "packages/*"
+        "packages/*",
+        "common/*",
+        "esdoc"
     ],
     "engines": {
         "node": ">= 10.23.1",
