--- a/packages/esdoc-npm7-monorepo/packages/esdoc-react-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-react-plugin/package.json
@@ -11,8 +11,8 @@
     "directory": "packages/esdoc-react-plugin"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.5",
-    "@enterthenamehere/esdoc-standard-plugin": "^1.3.0-beta"
+    "@enterthenamehere/esdoc-standard-plugin": "^1.3.0-beta",
+    "cheerio": "^1.0.0-rc.5"
   },
   "devDependencies": {
     "@enterthenamehere/esdoc": "^1.3.0-beta",
