chore: move enterthenamehere/esdoc-core and enterthenamehere/color-logger used in plugins to peer dependencies
Since esdoc is required to use the plugins and esdoc has color-logger
and esdoc-core as dependencies

--- a/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
@@ -29,7 +29,6 @@
     "@babel/parser": "^7.12.5",
     "@babel/preset-env": "^7.12.1",
     "@babel/traverse": "^7.12.5",
-    "@enterthenamehere/color-logger": "^0.0.7-beta",
     "fs-extra": "^9.0.1"
   },
   "devDependencies": {
@@ -44,6 +43,9 @@
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^8.2.1",
     "trash-cli": "^3.1.0"
+  },
+  "peerDependencies": {
+    "@enterthenamehere/color-logger": "^0.0.7-beta"
   },
   "files": [
     "src",
