--- a/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@babel/generator": "^7.12.5",
-    "@enterthenamehere/esdoc-core": "^1.3.0-beta",
     "@enterthenamehere/ice-cap": "^0.2.0-beta",
     "cpx2": "^3.0.0",
     "escape-string-regexp": "^4.0.0",
@@ -48,6 +47,9 @@
     "eslint-plugin-security": "^1.4.0",
     "esm": "^3.2.25",
     "mocha": "^8.2.1"
+  },
+  "peerDependencies": {
+    "@enterthenamehere/esdoc-core": "^1.3.0-beta"
   },
   "engines": {
     "node": ">= 10.23.1"
