--- a/packages/esdoc-npm7-monorepo/packages/esdoc-type-inference-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-type-inference-plugin/package.json
@@ -10,10 +10,6 @@
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
     "directory": "packages/esdoc-type-inference-plugin"
   },
-  "dependencies": {
-    "@enterthenamehere/color-logger": "^0.0.7-beta",
-    "@enterthenamehere/esdoc-core": "^1.3.0-beta"
-  },
   "devDependencies": {
     "@enterthenamehere/esdoc": "^1.3.0-beta",
     "eslint": "^7.13.0",
@@ -23,6 +19,10 @@
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^8.2.1",
     "trash-cli": "^3.1.0"
+  },
+  "peerDependencies": {
+    "@enterthenamehere/color-logger": "^0.0.7-beta",
+    "@enterthenamehere/esdoc-core": "^1.3.0-beta"
   },
   "engines": {
     "node": ">= 10.23.1"
