--- a/packages/esdoc-npm7-monorepo/packages/esdoc-typescript-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-typescript-plugin/package.json
@@ -11,7 +11,6 @@
     "directory": "packages/esdoc-typescript-plugin"
   },
   "dependencies": {
-    "@enterthenamehere/esdoc-core": "^1.3.0-beta",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
@@ -23,6 +22,9 @@
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^8.2.1",
     "trash-cli": "^3.1.0"
+  },
+  "peerDependencies": {
+    "@enterthenamehere/esdoc-core": "^1.3.0-beta"
   },
   "engines": {
     "node": ">= 10.23.1"
