--- a/packages/esdoc-npm7-monorepo/packages/esdoc-external-ecmascript-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-external-ecmascript-plugin/package.json
@@ -10,6 +10,9 @@
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
     "directory": "packages/esdoc-external-ecmascript-plugin"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "fs-extra": "^9.0.1"
   },
