--- a/packages/esdoc-npm7-monorepo/packages/esdoc-standard-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-standard-plugin/package.json
@@ -10,6 +10,9 @@
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
     "directory": "packages/esdoc-standard-plugin"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@enterthenamehere/esdoc-accessor-plugin": "^1.3.0-beta",
     "@enterthenamehere/esdoc-brand-plugin": "^1.3.0-beta",
