--- a/packages/esdoc-npm7-monorepo/packages/esdoc-typescript-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-typescript-plugin/package.json
@@ -10,6 +10,9 @@
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
     "directory": "packages/esdoc-typescript-plugin"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "typescript": "^4.0.5"
   },
