--- a/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
+++ b/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
@@ -10,6 +10,9 @@
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
     "directory": "common/color-logger"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "npm run clear && npm run transpile",
     "clear": "trash ./out",
