--- a/packages/esdoc-npm7-monorepo/esdoc/package.json
+++ b/packages/esdoc-npm7-monorepo/esdoc/package.json
@@ -13,6 +13,9 @@
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
     "directory": "esdoc"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">= 10.23.1"
   },
