--- a/packages/esdoc-npm7-monorepo/packages/esdoc-ecmascript-proposal-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-ecmascript-proposal-plugin/package.json
@@ -20,6 +20,9 @@
     "mocha": "^8.2.1",
     "trash-cli": "^3.1.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "engines": {
     "node": ">= 10.23.1"
   },
