--- a/packages/esdoc-npm7-monorepo/packages/esdoc-flow-type-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-flow-type-plugin/package.json
@@ -10,6 +10,9 @@
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
     "directory": "packages/esdoc-flow-type-plugin"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@enterthenamehere/esdoc": "^1.3.0-beta",
     "@enterthenamehere/esdoc-standard-plugin": "^1.3.0-beta",
