--- a/packages/esdoc-npm7-monorepo/packages/esdoc-inject-gtm-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-inject-gtm-plugin/package.json
@@ -10,6 +10,9 @@
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
     "directory": "packages/esdoc-inject-gtm-plugin"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3"
   },
