--- a/packages/esdoc-npm7-monorepo/esdoc/package.json
+++ b/packages/esdoc-npm7-monorepo/esdoc/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-security": "^1.4.0",
     "esm": "^3.2.25",
     "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "trash-cli": "^3.1.0"
   },
   "keywords": [
