--- a/packages/esdoc-npm7-monorepo/esdoc/package.json
+++ b/packages/esdoc-npm7-monorepo/esdoc/package.json
@@ -43,6 +43,8 @@
     "@babel/eslint-plugin": "^7.12.1",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
