--- a/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
@@ -43,13 +43,16 @@
     "@enterthenamehere/esdoc-type-inference-plugin": "^1.3.0-beta",
     "@enterthenamehere/esdoc-undocumented-identifier-plugin": "^1.3.0-beta",
     "@enterthenamehere/esdoc-unexported-identifier-plugin": "^1.3.0-beta",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "eslint": "^7.14.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "esm": "^3.2.25",
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0"
   },
   "peerDependencies": {
     "@enterthenamehere/esdoc-core": "^1.3.0-beta"
@@ -68,7 +71,7 @@
     "prepare": "npm run build",
     "test": "npm run test:clear && npm run test:mocha",
     "test:clear": "trash ./test/fixture/out",
-    "test:mocha": "mocha ./test/src --recursive --extension .test.js -t 10000 --require esm --require ./test/src/init.js",
+    "test:mocha": "nyc mocha ./test/src --recursive --extension .test.js -t 10000 --require esm --require ./test/src/init.js",
     "transpile": "babel ./src --out-dir ./out"
   },
   "keywords": [
