--- a/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
@@ -39,12 +39,15 @@
     "@babel/eslint-parser": "^7.12.1",
     "@babel/eslint-plugin": "^7.12.1",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "trash-cli": "^3.1.0"
   },
   "peerDependencies": {
