--- a/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
@@ -39,6 +39,7 @@
     "@babel/eslint-parser": "^7.12.1",
     "@babel/eslint-plugin": "^7.12.1",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@enterthenamehere/esdoc": "^1.3.0-beta.1",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
     "babel-plugin-istanbul": "^6.0.0",
     "eslint": "^7.13.0",
