chore: add nyc to dependencies

--- a/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
+++ b/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
@@ -43,6 +43,7 @@
     "esm": "^3.2.25",
     "fs-extra": "^9.0.1",
     "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "trash-cli": "^4.0.0"
   },
   "keywords": [
