--- a/packages/esdoc-npm7-monorepo/common/color-logger/package.json
+++ b/packages/esdoc-npm7-monorepo/common/color-logger/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-security": "^1.4.0",
     "esm": "^3.2.25",
     "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "trash-cli": "^4.0.0"
   },
   "keywords": [
