--- a/packages/esdoc-npm7-monorepo/packages/esdoc-ecmascript-proposal-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-ecmascript-proposal-plugin/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "trash-cli": "^3.1.0"
   },
   "publishConfig": {
@@ -40,6 +41,5 @@
     "src",
     "README.md"
   ],
-  "main": "src/Plugin.js",
-  "dependencies": {}
+  "main": "src/Plugin.js"
 }
