--- a/packages/esdoc-npm7-monorepo/packages/esdoc-exclude-source-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-exclude-source-plugin/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "trash-cli": "^3.1.0"
   },
   "engines": {
@@ -39,6 +40,5 @@
     "src",
     "README.md"
   ],
-  "main": "src/Plugin.js",
-  "dependencies": {}
+  "main": "src/Plugin.js"
 }
