--- a/packages/esdoc-npm7-monorepo/packages/esdoc-inject-style-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-inject-style-plugin/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "trash-cli": "^3.1.0"
   },
   "engines": {
