--- a/packages/esdoc-npm7-monorepo/packages/esdoc-react-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-react-plugin/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@enterthenamehere/esdoc": "^1.3.0-beta",
     "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
     "trash-cli": "^3.1.0"
   },
   "engines": {
