build: add coverage npm script

--- a/packages/esdoc-npm7-monorepo/packages/esdoc-standard-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-standard-plugin/package.json
@@ -42,7 +42,10 @@
     "node": ">= 10.23.1"
   },
   "scripts": {
-    "test": "trash ./test/out && mocha --require ./test/init.js --recursive --extension .test.js"
+    "precoverage": "trash ./nyc_output && trash ./coverage",
+    "coverage": "nyc npm run test",
+    "pretest": "trash ./test/out",
+    "test": "mocha --require ./test/init.js --recursive --extension .test.js"
   },
   "keywords": [
     "esdoc",
