--- a/packages/esdoc-npm7-monorepo/common/color-logger/package.json
+++ b/packages/esdoc-npm7-monorepo/common/color-logger/package.json
@@ -37,6 +37,7 @@
     "@enterthenamehere/esdoc-importpath-plugin": "^1.3.0-beta",
     "@enterthenamehere/esdoc-standard-plugin": "^1.3.0-beta",
     "cpx2": "^3.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.14.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
