--- a/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
+++ b/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
@@ -35,6 +35,7 @@
     "@babel/eslint-plugin": "^7.12.1",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
+    "cross-env": "^7.0.3",
     "eslint": "^7.14.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
