--- a/packages/esdoc-npm7-monorepo/esdoc/package.json
+++ b/packages/esdoc-npm7-monorepo/esdoc/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-env": "^7.12.1",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
     "babel-plugin-istanbul": "^6.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.13.0",
     "eslint-plugin-compat": "^3.8.0",
     "eslint-plugin-import": "^2.22.1",
