--- a/packages/esdoc-npm7-monorepo/common/color-logger/package.json
+++ b/packages/esdoc-npm7-monorepo/common/color-logger/package.json
@@ -20,10 +20,7 @@
     "esdoc:generate": "esdoc -c esdoc.json",
     "esdoc:copy": "cpx \"./misc/color-logger.png\" \"out/docs/misc\" --verbose",
     "prepare": "npm run build",
-    "test": "npm run test:clear && npm run test:transpile && npm run test:mocha",
-    "test:clear": "trash ./test/out",
-    "test:mocha": "mocha ./test/out --recursive --extension .test.js --require esm -t 5000",
-    "test:transpile": "babel ./test/src --out-dir ./test/out",
+    "test": "mocha ./test/src --recursive --extension .test.js --require esm -t 5000",
     "transpile": "babel ./src --out-dir ./out"
   },
   "devDependencies": {
