--- a/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
+++ b/packages/esdoc-npm7-monorepo/common/ice-cap/package.json
@@ -16,6 +16,9 @@
   "scripts": {
     "build": "npm run clear && npm run transpile",
     "clear": "trash ./out",
+    "precoverage": "trash ./nyc_output && trash ./coverage",
+    "coverage": "npm run coverage:build && nyc npm run test && npm run build",
+    "coverage:build": "cross-env NODE_ENV=coverage npm run build",
     "esdoc": "esdoc -c esdoc.json",
     "prepare": "npm run build",
     "test": "mocha ./test/src --recursive --extension .test.js --require esm -t 5000",
