--- a/packages/esdoc-npm7-monorepo/esdoc/package.json
+++ b/packages/esdoc-npm7-monorepo/esdoc/package.json
@@ -23,6 +23,9 @@
     "prebuild": "npm run clear",
     "build": "npm run transpile",
     "clear": "trash ./out",
+    "precoverage": "trash ./nyc_output && trash ./coverage",
+    "coverage": "npm run coverage:build && nyc npm run test && npm run build",
+    "coverage:build": "cross-env NODE_ENV=coverage npm run build",
     "lint": "eslint ./src",
     "prepare": "npm run build",
     "pretest": "npm run test:clear",
