--- a/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-core/package.json
@@ -24,9 +24,12 @@
     "build": "npm run build:transpile",
     "build:clear": "trash ./lib",
     "build:transpile": "babel ./src --out-dir ./lib --source-maps inline",
+    "precoverage": "trash ./nyc_output && trash ./coverage",
+    "coverage": "npm run coverage:build && nyc npm run test && npm run build",
+    "coverage:build": "cross-env NODE_ENV=coverage npm run build",
     "prepare": "npm run build",
     "pretest": "npm run test:clear",
-    "test": "nyc mocha ./test --recursive -t 5000 --require esm --require ./test/init.js --extension .test.js",
+    "test": "mocha ./test --recursive -t 5000 --require esm --require ./test/init.js --extension .test.js",
     "test:clear": "trash ./test/integration-test/out"
   },
   "dependencies": {
