--- a/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-publish-html-plugin/package.json
@@ -69,10 +69,13 @@
     "copy:template-image": "cpx \"src/Builder/template/image/**/*.*\" \"out/Builder/template/image\" --verbose",
     "copy:template-dirfiles": "cpx \"src/Builder/template/*.*\" \"out/Builder/template\" --verbose",
     "copy:highlight.js-css": "cpx \"node_modules/highlight.js/styles/tomorrow.css\" \"out/Builder/template/css\" --verbose",
+    "precoverage": "trash ./nyc_output && trash ./coverage",
+    "coverage": "npm run coverage:build && nyc npm run test && npm run build",
+    "coverage:build": "cross-env-shell NODE_ENV=coverage npm run build",
     "prepare": "npm run build",
     "test": "npm run test:clear && npm run test:mocha",
     "test:clear": "trash ./test/fixture/out",
-    "test:mocha": "nyc mocha ./test/src --recursive --extension .test.js -t 10000 --require esm --require ./test/src/init.js",
+    "test:mocha": "mocha ./test/src --recursive --extension .test.js -t 10000 --require esm --require ./test/src/init.js",
     "transpile": "babel ./src --out-dir ./out"
   },
   "keywords": [
