--- a/packages/esdoc-npm7-monorepo/packages/esdoc-inject-script-plugin/package.json
+++ b/packages/esdoc-npm7-monorepo/packages/esdoc-inject-script-plugin/package.json
@@ -14,8 +14,8 @@
     "access": "public"
   },
   "dependencies": {
-    "fs-extra": "^9.0.1",
-    "cheerio": "^1.0.0-rc.3"
+    "cheerio": "^1.0.0-rc.3",
+    "fs-extra": "^9.0.1"
   },
   "devDependencies": {
     "@enterthenamehere/esdoc": "^1.3.0-beta",
@@ -26,7 +26,7 @@
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
-    "trash-cli": "^3.1.0"
+    "trash-cli": "^4.0.0"
   },
   "engines": {
     "node": ">= 10.23.1"
