--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
   "packages": [
-    "packages/*"
+    "packages/*",
+    "packages/common/*",
+    "packages/plugins/*"
   ],
   "version": "2.0.0"
 }
