build(lerna): let lerna manage dependencies and devdependencies

--- a/package.json
+++ b/package.json
@@ -2,6 +2,70 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/eslint-parser": "^7.12.1",
+    "@babel/eslint-plugin": "^7.12.1",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@enterthenamehere/esdoc": "file:../../esdoc",
+    "@enterthenamehere/esdoc-accessor-plugin": "file:../esdoc-accessor-plugin",
+    "@enterthenamehere/esdoc-brand-plugin": "file:../esdoc-brand-plugin",
+    "@enterthenamehere/esdoc-coverage-plugin": "file:../esdoc-coverage-plugin",
+    "@enterthenamehere/esdoc-ecmascript-proposal-plugin": "file:../esdoc-ecmascript-proposal-plugin",
+    "@enterthenamehere/esdoc-external-ecmascript-plugin": "file:../esdoc-external-ecmascript-plugin",
+    "@enterthenamehere/esdoc-integrate-manual-plugin": "file:../esdoc-integrate-manual-plugin",
+    "@enterthenamehere/esdoc-integrate-test-plugin": "file:../esdoc-integrate-test-plugin",
+    "@enterthenamehere/esdoc-standard-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-type-inference-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-unexported-identifier-plugin": "^1.3.0-beta",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "babel-plugin-istanbul": "^6.0.0",
+    "cpx2": "^3.0.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.13.0",
+    "eslint-plugin-compat": "^3.8.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
+    "esm": "^3.2.25",
+    "fs-extra": "^9.0.1",
+    "lerna": "^4.0.0",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
+    "trash-cli": "^4.0.0"
+  },
+  "dependencies": {
+    "@enterthenamehere/color-logger": "file:packages\\common\\color-logger",
+    "@enterthenamehere/esdoc": "file:packages\\esdoc",
+    "@enterthenamehere/esdoc-accessor-plugin": "file:packages\\plugins\\esdoc-accessor-plugin",
+    "@enterthenamehere/esdoc-brand-plugin": "file:packages\\plugins\\esdoc-brand-plugin",
+    "@enterthenamehere/esdoc-core": "file:packages\\plugins\\esdoc-core",
+    "@enterthenamehere/esdoc-coverage-plugin": "file:packages\\plugins\\esdoc-coverage-plugin",
+    "@enterthenamehere/esdoc-ecmascript-proposal-plugin": "file:packages\\plugins\\esdoc-ecmascript-proposal-plugin",
+    "@enterthenamehere/esdoc-exclude-source-plugin": "file:packages\\plugins\\esdoc-exclude-source-plugin",
+    "@enterthenamehere/esdoc-external-ecmascript-plugin": "file:packages\\plugins\\esdoc-external-ecmascript-plugin",
+    "@enterthenamehere/esdoc-external-nodejs-plugin": "file:packages\\plugins\\esdoc-external-nodejs-plugin",
+    "@enterthenamehere/esdoc-external-webapi-plugin": "file:packages\\plugins\\esdoc-external-webapi-plugin",
+    "@enterthenamehere/esdoc-flow-type-plugin": "file:packages\\plugins\\esdoc-flow-type-plugin",
+    "@enterthenamehere/esdoc-importpath-plugin": "file:packages\\plugins\\esdoc-importpath-plugin",
+    "@enterthenamehere/esdoc-inject-gtm-plugin": "file:packages\\plugins\\esdoc-inject-gtm-plugin",
+    "@enterthenamehere/esdoc-inject-script-plugin": "file:packages\\plugins\\esdoc-inject-script-plugin",
+    "@enterthenamehere/esdoc-inject-style-plugin": "file:packages\\plugins\\esdoc-inject-style-plugin",
+    "@enterthenamehere/esdoc-integrate-manual-plugin": "file:packages\\plugins\\esdoc-integrate-manual-plugin",
+    "@enterthenamehere/esdoc-integrate-test-plugin": "file:packages\\plugins\\esdoc-integrate-test-plugin",
+    "@enterthenamehere/esdoc-jsx-plugin": "file:packages\\plugins\\esdoc-jsx-plugin",
+    "@enterthenamehere/esdoc-lint-plugin": "file:packages\\plugins\\esdoc-lint-plugin",
+    "@enterthenamehere/esdoc-publish-html-plugin": "file:packages\\plugins\\esdoc-publish-html-plugin",
+    "@enterthenamehere/esdoc-publish-markdown-plugin": "file:packages\\plugins\\esdoc-publish-markdown-plugin",
+    "@enterthenamehere/esdoc-react-plugin": "file:packages\\plugins\\esdoc-react-plugin",
+    "@enterthenamehere/esdoc-standard-plugin": "file:packages\\plugins\\esdoc-standard-plugin",
+    "@enterthenamehere/esdoc-type-inference-plugin": "file:packages\\plugins\\esdoc-type-inference-plugin",
+    "@enterthenamehere/esdoc-typescript-plugin": "file:packages\\plugins\\esdoc-typescript-plugin",
+    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "file:packages\\plugins\\esdoc-undocumented-identifier-plugin",
+    "@enterthenamehere/esdoc-unexported-identifier-plugin": "file:packages\\plugins\\esdoc-unexported-identifier-plugin",
+    "@enterthenamehere/ice-cap": "file:packages\\common\\ice-cap"
   }
 }
