--- a/packages/common/ice-cap/package.json
+++ b/packages/common/ice-cap/package.json
@@ -25,27 +25,8 @@
     "transpile": "babel ./src --out-dir ./out"
   },
   "dependencies": {
-    "@enterthenamehere/color-logger": "^0.0.7-beta",
+    "@enterthenamehere/color-logger": "file:../color-logger",
     "cheerio": "^1.0.0-rc.5"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.12.7",
-    "@babel/core": "^7.12.7",
-    "@babel/eslint-parser": "^7.12.1",
-    "@babel/eslint-plugin": "^7.12.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.14.0",
-    "eslint-plugin-compat": "^3.8.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-security": "^1.4.0",
-    "esm": "^3.2.25",
-    "fs-extra": "^9.0.1",
-    "mocha": "^8.2.1",
-    "nyc": "^15.1.0",
-    "trash-cli": "^4.0.0"
   },
   "keywords": [
     "html",
