--- a/packages/esdoc/package.json
+++ b/packages/esdoc/package.json
@@ -34,31 +34,10 @@
     "transpile": "babel ./src --out-dir ./out"
   },
   "dependencies": {
-    "@enterthenamehere/color-logger": "^0.0.7-beta",
-    "@enterthenamehere/esdoc-core": "^1.3.0-beta",
+    "@enterthenamehere/color-logger": "file:../common/color-logger",
+    "@enterthenamehere/esdoc-core": "file:../plugins/esdoc-core",
     "fs-extra": "^9.0.1",
     "minimist": "^1.2.5"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/eslint-parser": "^7.12.1",
-    "@babel/eslint-plugin": "^7.12.1",
-    "@babel/plugin-proposal-class-properties": "^7.12.13",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@istanbuljs/nyc-config-babel": "^3.0.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.13.0",
-    "eslint-plugin-compat": "^3.8.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-security": "^1.4.0",
-    "esm": "^3.2.25",
-    "mocha": "^8.2.1",
-    "nyc": "^15.1.0",
-    "trash-cli": "^4.0.0"
   },
   "keywords": [
     "jsdoc",
