--- a/packages/plugins/esdoc-flow-type-plugin/package.json
+++ b/packages/plugins/esdoc-flow-type-plugin/package.json
@@ -14,11 +14,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-standard-plugin": "^1.3.0-beta",
-    "mocha": "^8.2.1",
-    "nyc": "^15.1.0",
-    "trash-cli": "^4.0.0"
+    "@enterthenamehere/esdoc-standard-plugin": "file:../esdoc-standard-plugin"
   },
   "peerDependencies": {
     "@enterthenamehere/esdoc-core": "^1.3.0-beta"
