--- a/packages/plugins/esdoc-publish-html-plugin/package.json
+++ b/packages/plugins/esdoc-publish-html-plugin/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@babel/generator": "^7.12.5",
-    "@enterthenamehere/ice-cap": "^0.2.0-beta",
+    "@enterthenamehere/ice-cap": "file:../../common/ice-cap",
     "cheerio": "^1.0.0-rc.5",
     "cpx2": "^3.0.0",
     "escape-string-regexp": "^4.0.0",
@@ -27,33 +27,9 @@
     "trash-cli": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
-    "@babel/eslint-parser": "^7.12.1",
-    "@babel/eslint-plugin": "^7.12.1",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@enterthenamehere/esdoc": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-accessor-plugin": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-brand-plugin": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-coverage-plugin": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-ecmascript-proposal-plugin": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-external-ecmascript-plugin": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-integrate-manual-plugin": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-integrate-test-plugin": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-type-inference-plugin": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "^1.3.0-beta",
-    "@enterthenamehere/esdoc-unexported-identifier-plugin": "^1.3.0-beta",
-    "@istanbuljs/nyc-config-babel": "^3.0.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.14.0",
-    "eslint-plugin-compat": "^3.8.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-security": "^1.4.0",
-    "esm": "^3.2.25",
-    "mocha": "^8.2.1",
-    "nyc": "^15.1.0"
+    "@enterthenamehere/esdoc-type-inference-plugin": "file:../esdoc-type-inference-plugin",
+    "@enterthenamehere/esdoc-undocumented-identifier-plugin": "file:../esdoc-undocumented-identifier-plugin",
+    "@enterthenamehere/esdoc-unexported-identifier-plugin": "file:../esdoc-unexported-identifier-plugin"
   },
   "peerDependencies": {
     "@enterthenamehere/esdoc-core": "^1.3.0-beta"
