--- a/packages/plugins/esdoc-publish-markdown-plugin/package.json
+++ b/packages/plugins/esdoc-publish-markdown-plugin/package.json
@@ -14,20 +14,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@enterthenamehere/ice-cap": "^0.2.0-beta",
+    "@enterthenamehere/ice-cap": "file:../../common/ice-cap",
     "fs-extra": "^9.0.1",
     "to-markdown": "^3.1.1"
-  },
-  "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0-beta",
-    "eslint": "^7.13.0",
-    "eslint-plugin-compat": "^3.8.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-security": "^1.4.0",
-    "mocha": "^8.2.1",
-    "nyc": "^15.1.0",
-    "trash-cli": "^4.0.0"
   },
   "engines": {
     "node": ">= 10.23.1"
