--- a/packages/plugins/esdoc-react-plugin/package.json
+++ b/packages/plugins/esdoc-react-plugin/package.json
@@ -14,14 +14,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@enterthenamehere/esdoc-standard-plugin": "^1.3.0-beta",
+    "@enterthenamehere/esdoc-standard-plugin": "file:../esdoc-standard-plugin",
     "cheerio": "^1.0.0-rc.5"
-  },
-  "devDependencies": {
-    "@enterthenamehere/esdoc": "^1.3.0-beta",
-    "mocha": "^8.2.1",
-    "nyc": "^15.1.0",
-    "trash-cli": "^4.0.0"
   },
   "engines": {
     "node": ">= 10.23.1"
