build: specify test directory in package.json

--- a/packages/esdoc/package.json
+++ b/packages/esdoc/package.json
@@ -62,6 +62,9 @@
     "out",
     "src"
   ],
+  "directories": {
+    "test": "test"
+  },
   "main": "out/ESDoc.js",
   "bin": {
     "esdoc": "out/ESDocCLI.js"
