--- a/packages/plugins/esdoc-importpath-plugin/package.json
+++ b/packages/plugins/esdoc-importpath-plugin/package.json
@@ -31,6 +31,9 @@
     "src",
     "README.md"
   ],
+  "directories": {
+    "test": "test"
+  },
   "main": "src/Plugin.js",
   "dependencies": {
     "fs-extra": "^9.0.1"
