--- a/packages/plugins/esdoc-undocumented-identifier-plugin/package.json
+++ b/packages/plugins/esdoc-undocumented-identifier-plugin/package.json
@@ -24,12 +24,15 @@
   },
   "keywords": [
     "esdoc",
-    "undocument",
+    "undocumented",
     "plugin"
   ],
   "files": [
     "src",
     "README.md"
   ],
+  "directories": {
+    "test": "test"
+  },
   "main": "src/Plugin.js"
 }
