chore: fix packages' url (again)

--- a/packages/color-logger/package.json
+++ b/packages/color-logger/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.7-beta.0",
   "description": "Colorful Logger",
   "author": "h13i32maru",
-  "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/plugins/common/color-logger",
+  "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/color-logger",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
-    "directory": "common/color-logger"
+    "directory": "packages/color-logger"
   },
   "publishConfig": {
     "access": "public"
