--- a/packages/esdoc/package.json
+++ b/packages/esdoc/package.json
@@ -11,7 +11,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/EnterTheNameHere/esdoc-monorepo",
-    "directory": "esdoc"
+    "directory": "packages/esdoc"
   },
   "publishConfig": {
     "access": "public"
