--- a/packages/color-logger/package.json
+++ b/packages/color-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enterthenamehere/color-logger",
-  "version": "0.0.7-beta.0",
+  "version": "2.0.0",
   "description": "Colorful Logger",
   "author": "h13i32maru",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/color-logger",
