--- a/packages/esdoc-core/package.json
+++ b/packages/esdoc-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enterthenamehere/esdoc-core",
-  "version": "1.3.0-beta.1",
+  "version": "2.0.0",
   "description": "esdoc core.",
   "author": {
     "name": "h13i32maru",
