--- a/packages/esdoc-external-webapi-plugin/package.json
+++ b/packages/esdoc-external-webapi-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enterthenamehere/esdoc-external-webapi-plugin",
-  "version": "1.3.0-beta.0",
+  "version": "2.0.0",
   "description": "A external Web API plugin for ESDoc",
   "author": "h13i32maru",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/esdoc-external-webapi-plugin",
