--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enterthenamehere/esdoc-publish-html-plugin",
-  "version": "1.3.0-beta.2",
+  "version": "2.0.0",
   "description": "A publish HTML plugin for ESDoc",
   "author": "h13i32maru",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/esdoc-publish-html-plugin",
