--- a/packages/esdoc-typescript-plugin/package.json
+++ b/packages/esdoc-typescript-plugin/package.json
@@ -17,7 +17,7 @@
     "typescript": "^4.0.5"
   },
   "peerDependencies": {
-    "@enterthenamehere/esdoc-core": "^1.3.0-beta"
+    "@enterthenamehere/esdoc-core": "file:../esdoc-core"
   },
   "engines": {
     "node": ">= 10.23.1"
