--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@babel/generator": "^7.12.5",
+    "@enterthenamehere/esdoc-core": "file:../esdoc-core",
     "@enterthenamehere/ice-cap": "file:../ice-cap",
     "cheerio": "^1.0.0-rc.5",
     "cpx2": "^3.0.0",
@@ -25,9 +26,6 @@
     "sanitize-html": "^2.1.2",
     "taffydb": "^2.7.3",
     "trash-cli": "^4.0.0"
-  },
-  "peerDependencies": {
-    "@enterthenamehere/esdoc-core": "file:../esdoc-core"
   },
   "engines": {
     "node": ">= 10.23.1"
