--- a/packages/esdoc-typescript-plugin/package.json
+++ b/packages/esdoc-typescript-plugin/package.json
@@ -14,10 +14,8 @@
     "access": "public"
   },
   "dependencies": {
+    "@enterthenamehere/esdoc-core": "file:../esdoc-core",
     "typescript": "^4.0.5"
-  },
-  "peerDependencies": {
-    "@enterthenamehere/esdoc-core": "file:../esdoc-core"
   },
   "engines": {
     "node": ">= 10.23.1"
