build(babel): rewrite to use root dir

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,8 +1,22 @@
 {
-    "babelrcRoots": [
-        ".",
-        "packages/*",
-        "common/*",
-        "esdoc/"
-    ]
+    "presets": [
+        [
+            "@babel/preset-env", {
+            "targets": {
+                "node": 10,
+                "esmodules": true
+            }}
+        ]
+    ],
+    "ignore": [ "test" ],
+    "sourceMaps": "inline",
+    "plugins": [
+        "@babel/plugin-transform-modules-commonjs",
+        "@babel/plugin-proposal-class-properties"
+    ],
+    "env": {
+        "coverage": {
+            "plugins": ["istanbul"]
+        }
+    }
 }
