--- a/packages/esdoc/package.json
+++ b/packages/esdoc/package.json
@@ -31,7 +31,7 @@
     "pretest": "npm run test:clear",
     "test": "mocha ./test --recursive -t 5000 --require esm --extension .test.js",
     "test:clear": "trash ./test/integration-test/out",
-    "transpile": "babel ./src --out-dir ./out"
+    "transpile": "babel ./src --out-dir ./out --root-mode upward"
   },
   "dependencies": {
     "@enterthenamehere/color-logger": "file:../color-logger",
