--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -45,7 +45,7 @@
     "test": "npm run test:clear && npm run test:mocha",
     "test:clear": "trash ./test/fixture/out",
     "test:mocha": "mocha ./test/src --recursive --extension .test.js -t 10000 --require esm --require ./test/src/init.js",
-    "transpile": "babel ./src --out-dir ./out"
+    "transpile": "babel ./src --out-dir ./out --root-mode upward"
   },
   "keywords": [
     "esdoc",
