build: add scripts to build, test and coverage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+      "build": "lerna run build",
+      "precoverage": "trash ./coverage",
+      "coverage": "npm run coverage:build && nyc npm run test:execute && npm run build",
+      "coverage:build": "lerna run coverage:build",
+      "coverage:remove_nyc_output": "trash ./.nyc_output",
+      "postcoverage": "npm run coverage:remove_nyc_output",
+      "test": "npm run build && npm run test:execute",
+      "test:execute": "lerna run test"
+  },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
