build: add script to test only latest changes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
       "coverage:remove_nyc_output": "trash ./.nyc_output",
       "postcoverage": "npm run coverage:remove_nyc_output",
       "test": "npm run build && npm run test:execute",
-      "test:execute": "lerna run test"
+      "test:execute": "lerna run test",
+      "test:latest": "lerna run --since main build && lerna run --since main test"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
