build: update for renaming/moving templates folder

--- a/packages/esdoc-publish-html-plugin/package.json
+++ b/packages/esdoc-publish-html-plugin/package.json
@@ -34,10 +34,10 @@
     "build": "npm run clear && npm run transpile && npm run copy:template && npm run copy:highlight.js-css",
     "clear": "trash ./out",
     "copy:template": "npm run copy:template-css && npm run copy:template-image && npm run copy:template-dirfiles",
-    "copy:template-css": "cpx \"src/Builder/template/css/**/*.*\" \"out/Builder/template/css\" --verbose",
-    "copy:template-image": "cpx \"src/Builder/template/image/**/*.*\" \"out/Builder/template/image\" --verbose",
-    "copy:template-dirfiles": "cpx \"src/Builder/template/*.*\" \"out/Builder/template\" --verbose",
-    "copy:highlight.js-css": "cpx \"../../node_modules/highlight.js/styles/tomorrow.css\" \"out/Builder/template/css\" --verbose",
+    "copy:template-css": "cpx \"src/html-template/css/**/*.*\" \"out/html-template/css\" --verbose",
+    "copy:template-image": "cpx \"src/html-template/image/**/*.*\" \"out/html-template/image\" --verbose",
+    "copy:template-dirfiles": "cpx \"src/html-template/*.*\" \"out/html-template\" --verbose",
+    "copy:highlight.js-css": "cpx \"../../node_modules/highlight.js/styles/tomorrow.css\" \"out/html-template/css\" --verbose",
     "precoverage": "trash ./nyc_output && trash ./coverage",
     "coverage": "npm run coverage:build && nyc npm run test && npm run build",
     "coverage:build": "cross-env-shell NODE_ENV=coverage npm run build",
