eslint: add override for publish-html scripts to use browser env

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -111,6 +111,12 @@
             "globals": {
                 "assert": false
             }
+        },
+        {
+          "files": ["packages/esdoc-publish-html-plugin/src/html-template/script/**"],
+          "env": {
+            "browser": true
+          }
         }
     ]
 }
