--- a/packages/esdoc-inject-script-plugin/package.json
+++ b/packages/esdoc-inject-script-plugin/package.json
@@ -14,8 +14,7 @@
     "access": "public"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "fs-extra": "^9.0.1"
+    "cheerio": "^1.0.0-rc.3"
   },
   "engines": {
     "node": ">= 10.23.1"
