--- a/packages/esdoc-integrate-manual-plugin/package.json
+++ b/packages/esdoc-integrate-manual-plugin/package.json
@@ -34,8 +34,5 @@
   "directories": {
     "test": "test"
   },
-  "main": "src/Plugin.js",
-  "dependencies": {
-    "fs-extra": "^9.0.1"
-  }
+  "main": "src/Plugin.js"
 }
