github: Change running of Actions to only when js files are changed.

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,8 +2,13 @@ name: Execute unit tests
 on:
   push:
     branches: [ main ]
+      paths:
+        - '**.js'
+        - '!**/test/**'
   pull_request:
     branches: [ main ]
+      paths:
+        - '**.js'
 jobs:
   build:
     runs-on: ubuntu-latest
