build(tests): remove esm, replace with @babel/register

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
+    "@babel/register": "^7.16.9",
     "@enterthenamehere/esdoc": "file:packages\\esdoc",
     "@enterthenamehere/esdoc-accessor-plugin": "file:packages\\esdoc-accessor-plugin",
     "@enterthenamehere/esdoc-brand-plugin": "file:packages\\esdoc-brand-plugin",
@@ -42,7 +43,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
-    "esm": "^3.2.25",
     "fs-extra": "^9.0.1",
     "lerna": "^4.0.0",
     "mocha": "^9.2.0",
