tests: move mocha options to root config file; replace esm with @babel/register; use babelRegister.js to tell babel to look for babel config upward; and update npm scripts

--- a/packages/esdoc-core/package.json
+++ b/packages/esdoc-core/package.json
@@ -29,7 +29,7 @@
     "coverage:build": "cross-env NODE_ENV=coverage npm run build",
     "prepare": "npm run build",
     "pretest": "npm run test:clear",
-    "test": "mocha ./test --recursive -t 5000 --require esm --require ./test/init.js --extension .test.js",
+    "test": "mocha ./test --require ./test/init.js",
     "test:clear": "trash ./test/integration-test/out"
   },
   "dependencies": {
