--- a/packages/color-logger/package.json
+++ b/packages/color-logger/package.json
@@ -23,7 +23,7 @@
     "esdoc:generate": "esdoc -c esdoc.json",
     "esdoc:copy": "cpx \"./misc/color-logger.png\" \"out/docs/misc\" --verbose",
     "prepare": "npm run build",
-    "test": "mocha ./test/src --recursive --extension .test.js --require esm -t 5000",
+    "test": "mocha ./test/src",
     "transpile": "babel ./src --out-dir ./out --root-mode upward"
   },
   "keywords": [
