--- a/packages/esdoc/package.json
+++ b/packages/esdoc/package.json
@@ -29,7 +29,7 @@
     "lint": "eslint ./src",
     "prepare": "npm run build",
     "pretest": "npm run test:clear",
-    "test": "mocha ./test --recursive -t 5000 --require esm --extension .test.js",
+    "test": "mocha ./test/src",
     "test:clear": "trash ./test/out",
     "transpile": "babel ./src --out-dir ./out --root-mode upward"
   },
