--- a/packages/esdoc-inject-style-plugin/package.json
+++ b/packages/esdoc-inject-style-plugin/package.json
@@ -14,7 +14,7 @@
     "access": "public"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.10"
+    "cheerio": "1.0.0-rc.10"
   },
   "engines": {
     "node": ">= 10.23.1"
