--- a/packages/esdoc-inject-gtm-plugin/package.json
+++ b/packages/esdoc-inject-gtm-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enterthenamehere/esdoc-inject-gtm-plugin",
-  "version": "2.5.2",
+  "version": "2.5.3-dev.1",
   "description": "A inject google-tag-manager plugin for ESDoc",
   "author": "9renpoto",
   "homepage": "https://github.com/EnterTheNameHere/esdoc-monorepo/tree/main/packages/esdoc-inject-gtm-plugin",
